Adopt review suggestions